* The CVS directories (automatically created by the CVS repository) can no   longer be accessed from the web.  Let's keep lurking eyes out. ;) * I'm still idling (except for these kind of tidbits) until Natrak commited   the new user system.  *evil grin*

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,12 @@
   deny from all
 </Files>
 
+# Protect CVS directories:
+<Files *CVS>
+  order deny,allow
+  deny from all
+</Files>
+
 # Customized server error messages:
 ErrorDocument 400 /error.php
 ErrorDocument 402 /error.php
