* Added extra PHP variables to .htaccess as discussed earlier this week.

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
+
 #
-# drop.org apache configuration
+# Apache/PHP/site settings:
 #
 
 # Archive feature:
@@ -34,7 +35,12 @@ ErrorDocument 403 /error.php
 ErrorDocument 404 /error.php
 ErrorDocument 500 /error.php
 
-# PHP settings
-php_value session.cookie_lifetime 1728000
-php_value session.gc_maxlifetime  1728000
-php_value session.name            DROPID
+# Overload PHP variables:
+<IfModule mod_php4.c>
+   php_value magic_quotes_gpc        On
+   php_value magic_quotes_runtime    Off
+   php_value magic_quotes_sybase     Off
+   php_value session.cookie_lifetime 1728000
+   php_value session.gc_maxlifetime  1728000
+   php_value session.name            DROPID
+</IfModule>
