Again, a large batch of updates - I'm twisting things around here:
 1. improved .htaccess to be more "secure": to keep prying
    eyes out

 2. rewrote the administration section from scratch using a
    modular approach

 3. improved the information gathered by error.php - we can
    now (hopefully) track what bots are crawling us.

 4. fixed a bug in submit.php, fixed a bug in theme zaphod,
    fixed a bug in theme marvin.

 5. rewrote cron from scratch - it now interfaces with
    modules as it should have been from the beginning.
    Very cool if you ask me - it can use UNIX/Linux
    crontabs.

 6. updated widget.inc to be module aware - needs more
    work though - maybe this afternoon?

 7. updated most modules: small bugfixes, improvements, and
    even the documentation

 8. removed diary.php and made it a module - you can now
    run a drop.org site without a diary system if someone
    would prefer so

 9. updated all themes to use the new modules where
    appropriate

 10. added a robots.txt because the error message in the
     watchdog become annoying.

 11. added the new configuration system (mutliple vhosts
     on the same source tree) - use hostname.conf instead
     of config.inc

 12. removed calendar.inc and made it a module

 13. added format_interval() to functions.inc (UnConeD)

 14. whatever I forgot ...

--- a/.htaccess
+++ b/.htaccess
@@ -7,22 +7,26 @@
   ForceType application/x-httpd-php
 </Files>
 
-# Protect .inc files:
-#  .inc files can be read from the web so make sure we keep it 
-#  away from the casual prying eyes.  Especially `config.inc'.
-<Files *.inc>
+# Protect includes-directory:
+<Files *includes>
+  order deny,allow
+  deny from all
+</Files>
+
+# Protect modules-directory:
+<Files *modules>
+  order deny,allow
+  deny from all
+</Files>
+
+# Protect themes-directory:
+<Files *themes>
   order deny,allow
   deny from all
 </Files>
 
 # Protect CVS directories:
 <Files *CVS>
-  order deny,allow
-  deny from all
-</Files>
-
-# Protect theme directories:
-<Files *themes>
   order deny,allow
   deny from all
 </Files>
@@ -47,4 +51,3 @@ ErrorDocument 500 /error.php
    php_value session.gc_maxlifetime  2000000
    php_value session.cache_expire    200000
 </IfModule>
-
