--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -4,23 +4,12 @@
 # Database settings:
 #
 
-### host: "http://www.drop.org/":
-$db_host = "zind.net";
-$db_name = "droporg";
-$db_pass = "DropIes";
-$db_name = "droporg";
-
-### host: "http://beta.drop.org/":
-#$db_host = "zind.net";
-#$db_name = "dries";
-#$db_pass = "Abc123";
-#$db_name = "dries";
-
 ### host: "http://localhost/":
-#$db_host = "localhost";
-#$db_name = "drop";
-#$db_pass = "drop";
-#$db_name = "drop";
+$db_host = "localhost";
+$db_name = "name";
+$db_pass = "pass";
+$db_name = "name";
+
 
 #
 # Administrative information
@@ -37,7 +26,6 @@ $site_email = "info@drop.org";
 #   represent the mathematical calculation to be performed 
 #   to update a comment's value.
 #
-
 $comment_votes = array("none" => "none", 
                        "-1"   => "- 1", 
                        "0"    => "+ 0",
@@ -78,18 +66,15 @@ $anonymous = "Anonymous Chicken";
 #   the first theme listed in this associative array will
 #   automatically become the default theme.
 #
-$themes = array("Marvin"  => array(
+$themes = array("UnConeD" => array(
+		   "themes/unconed/unconed.theme",
+		   "modern theme, gray and blue, high coolness factor"),
+                "Marvin"  => array(
                    "themes/marvin/marvin.theme", 
                    "classic theme, white, basic design with a fresh look"),
                 "Zaphod"  => array(
                    "themes/zaphod/zaphod.theme", 
-                   "classic theme, yellow, structured, advanced navigation"),
-                "Trillian"  => array(
-                   "themes/trillian/trillian.theme", 
-                   "simple, easy, black background"),
-		"UnConeD" => array(
-		   "themes/unconed/unconed.theme",
-		   "modern theme, gray and blue, high coolness factor"));
+                   "classic theme, yellow, structured, advanced navigation"));
 
 #
 # Submission moderation votes:
@@ -112,7 +97,7 @@ $submission_votes = array("neutral (+0)" => "+ 0",
 #   story is pushed over the threshold and up it goes on the public 
 #   page.  On the other hand, when too many people voted to drop a 
 #   story, the story will get trashed.
-$submission_post_threshold = "3";
+$submission_post_threshold = "5";
 $submission_dump_threshold = "-2";
 
 #
