--- a/.htaccess
+++ b/.htaccess
@@ -7,26 +7,8 @@
   ForceType application/x-httpd-php
 </Files>
 
-# Protect includes-directory:
-<Files *includes>
-  order deny,allow
-  deny from all
-</Files>
-
-# Protect modules-directory:
-<Files *modules>
-  order deny,allow
-  deny from all
-</Files>
-
-# Protect themes-directory:
-<Files *themes>
-  order deny,allow
-  deny from all
-</Files>
-
-# Protect CVS directories:
-<Files *CVS>
+# Protect files and directories from prying eyes:
+<Files ~ "(class|conf|CVS|database|Entries|inc|module|Repository|Root|script|sh|sql|theme)">
   order deny,allow
   deny from all
 </Files>
