- a few more updates

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -54,7 +54,7 @@ $categories = array("Announcements",
 # 
 # Allowed HTML tags:
 #
-$allowed_html = "<A><B><BR><DD><DL><DT><EM><HR><I><IL><SMALL><OL><U><UL>";
+$allowed_html = "<A><B><BLOCKQUOTE><BR><DD><DL><DT><EM><HR><I><IL><SMALL><OL><U><UL>";
 
 #
 # Name for anonymous users:
