- prepared hostname.conf for public release

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -14,9 +14,9 @@ $db_name = "name";
 #
 # Administrative information
 #
-$site_name = "drop.org";
-$site_url  = "http://www.drop.org/";
-$site_email = "info@drop.org";
+$site_name = "site name";
+$site_url  = "http://yourdomain.com/";
+$site_email = "info@yourdomain.com";
 
 
 #
@@ -71,10 +71,7 @@ $themes = array("UnConeD" => array(
 		   "modern theme, gray and blue, high coolness factor"),
                 "Marvin"  => array(
                    "themes/marvin/marvin.theme", 
-                   "classic theme, white, basic design with a fresh look"),
-                "Zaphod"  => array(
-                   "themes/zaphod/zaphod.theme", 
-                   "classic theme, yellow, structured, advanced navigation"));
+                   "classic theme, white, basic design with a fresh look"));
 
 #
 # Submission moderation votes:
@@ -97,7 +94,7 @@ $submission_votes = array("neutral (+0)" => "+ 0",
 #   story is pushed over the threshold and up it goes on the public 
 #   page.  On the other hand, when too many people voted to drop a 
 #   story, the story will get trashed.
-$submission_post_threshold = "5";
+$submission_post_threshold = "3";
 $submission_dump_threshold = "-2";
 
 #
