A batch of patches:
  - configuration:
    + renamed $db_name to $db_user
    + renamed $db_base to $db_name
  - fixed small diary glitch
  - fixed initial-comment-score problem
  - fixed comment rating bug: improved the API and updated the
    themes
  - removed some tabs from Steven ;)
  - fixed backend warnings and improved robustness
    I'm not happy yet with the headline grabber - it generates
    too many SQL errors.
  - some small cosmetic changes in comment.module
  - fixed minor glitch in format_interval()

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -3,12 +3,10 @@
 #
 # Database settings:
 #
-
-### host: "http://localhost/":
 $db_host = "localhost";
-$db_name = "name";
-$db_pass = "pass";
-$db_base = "base";
+$db_user = "username";
+$db_pass = "password";
+$db_name = "database";
 
 
 #
