--- a/.htaccess
+++ b/.htaccess
@@ -32,10 +32,9 @@ ErrorDocument 500 /error.php
    php_value magic_quotes_gpc        1
    php_value magic_quotes_runtime    0
    php_value magic_quotes_sybase     0
-   php_value session.name            DROPID
    php_value session.auto_start      0
    php_value session.cookie_lifetime 2000000
    php_value session.gc_maxlifetime  2000000
    php_value session.cache_expire    200000
-   php_value session.save_path       /tmp/dropsessions
+   # php_value session.save_path       /tmp/dropsessions
 </IfModule>
