- More updates on the translation support

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -55,6 +55,15 @@ $themes = array("UnConeD" => array(
                   "classic theme, white, basic design with a fresh look"));
 
 #
+# Languages / translation / internationalization:
+#   the first language listed in this associative array will
+#   automatically become the default language.  You can add
+#   a lanaguage but make sure your SQL table, called locales
+#   is updated appropriatly.
+#
+$languages = array("en" => "English");
+
+#
 # Submission moderation votes:
 #   the keys of this associative array are displayed in each
 #   submission's selection box whereas the corresponding values
