--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -35,7 +35,7 @@ $comment_votes = array("none" => "none",
 #
 # Allowed HTML tags:
 #
-$allowed_html = "<A><B><BLOCKQUOTE><BR><DD><DL><DT><EM><HR><I><LI><SMALL><OL><U><UL>";
+$allowed_html = "<A><B><BLOCKQUOTE><DD><DL><DT><EM><HR><I><LI><SMALL><OL><U><UL>";
 
 #
 # Name for anonymous users:
