- fixed small translation glitch in format_interval - added a couple of missing t() functions - improved the comments module, fixed the score problem Jeroen   reported earlier -> it's slicker but I hope it won't break anything

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -8,12 +8,11 @@ $db_user = "username";
 $db_pass = "password";
 $db_name = "database";
 
-
 #
 # Administrative information
 #
 $site_name = "site name";
-$site_url  = "http://yourdomain.com/";
+$site_url  = "http://yourdomain.com/";  // add a trailing slash
 $site_email = "info@yourdomain.com";
 
 #
@@ -89,11 +88,12 @@ $submission_votes = array("neutral (+0)" => "+ 0",
 $submission_rate = array("comment" => "60",     //  60 seconds = 1 minute
                          "diary"   => "300",    // 300 seconds = 5 minutes
                          "story"   => "300");   // 300 seconds = 5 minutes
+
 #
 # Submission size:
 #  the maximum length (i.e. the maximum number of characters) a
 #  story, a diary entry, or a comment is allowed to be.
 #
-$submission_size = 12000;     // 12.000 characters is more or less 300 lines
+$submission_size = 12000;     // 12.000 characters is appr. 300 lines
 
 ?>
