- various smaller updates before I start watching Formula 1 with [a] a   0.5 liter box of Haagen-Dhaz (Belgian Choclate) and [b] my laptop on   my lap for drupal hacking.  Life hardly can get any better than this.

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -12,15 +12,12 @@ $db_name = "database";
 # Administrative information
 #
 $site_name = "site name";
-$site_url  = "http://yourdomain.com/";  // add a trailing slash
+$site_url = "http://yourdomain.com/";  // add a trailing slash
 $site_email = "info@yourdomain.com";
 
 #
 # Comment votes:
-#   the keys of this associative array are displayed in each
-#   comment's selection box whereas the corresponding values
-#   represent the mathematical calculation to be performed
-#   to update a comment's value.
+#   The keys of this associative array are displayed in each comment's selection box whereas the corresponding values represent the mathematical calculation to be performed to update a comment's value.
 #
 $comment_votes = array("none" => "none",
                        "-1"   => "- 1",
@@ -43,8 +40,7 @@ $anonymous = "Anonymous Chicken";
 
 #
 # Themes:
-#   the first theme listed in this associative array will
-#   automatically become the default theme.
+#   The first theme listed in this associative array will automatically become the default theme.
 #
 $themes = array("UnConeD" => array(
                   "themes/unconed/unconed.theme",
@@ -55,35 +51,22 @@ $themes = array("UnConeD" => array(
 
 #
 # Languages / translation / internationalization:
-#   the first language listed in this associative array will
-#   automatically become the default language.  You can add
-#   a lanaguage but make sure your SQL table, called locales
-#   is updated appropriatly.
-#
-$languages = array("en" => "English");
+#   The first language listed in this associative array will automatically become the default language.  You can add a language but make sure your SQL table, called locales is updated appropriately.
+#   Translation support - as provided by the default locale module add significant overhead to your site in exchange for excessive maintenance capabilities.  If your site does not require translation support, disable it by commenting out the $language variable below.
+#$languages = array("en" => "English");
 
 #
 # Submission moderation votes:
-#   the keys of this associative array are displayed in each
-#   submission's selection box whereas the corresponding values
-#   represent the mathematical calculation to be performed to
-#   update a comment's value.
-#   Warning: changing $submission_votes will affect the integrity
-#   of all pending stories in the open submission queue.   Do not
-#   change this setting unless there are no pending stories in the
-#   submission queue or unless you know what you are doing.
+#   The keys of this associative array are displayed in each submission's selection box whereas the corresponding values represent the mathematical calculation to be performed to update a comment's value.
+#   Warning: changing $submission_votes will affect the integrity of all pending stories in the open submission queue.   Do not change this setting unless there are no pending stories in the submission queue or unless you know what you are doing.
 $submission_votes = array("neutral (+0)" => "+ 0",
                           "post it (+1)" => "+ 1",
                           "dump it (-1)" => "- 1");
 
 #
 # Submission rate:
-#   defines the submission rate for the different types of content
-#   submission.  It is supposed to stop malicious attempts to screw
-#   with the database and to stop denial of service attacks.
-#   Example:
-#     '"comment" => 60' means that there is only one new comment
-#     allowed from the same IP-address every 60 seconds.
+#   Defines the submission rate for the different types of content submission.  It is supposed to stop malicious attempts to screw with the database and to stop denial of service attacks.
+#   Example: '"comment" => 60' means that there is only one new comment allowed from the same IP-address every 60 seconds.
 #
 $submission_rate = array("comment" => "60",     //  60 seconds = 1 minute
                          "diary"   => "300",    // 300 seconds = 5 minutes
@@ -91,8 +74,7 @@ $submission_rate = array("comment" => "60",     //  60 seconds = 1 minute
 
 #
 # Submission size:
-#  the maximum length (i.e. the maximum number of characters) a
-#  story, a diary entry, or a comment is allowed to be.
+#  The maximum length (i.e. the maximum number of characters) a story, a diary entry, or a comment is allowed to be.
 #
 $submission_size = 12000;     // 12.000 characters is appr. 300 lines
 
