- large commit of everything else that has been queued in my backlog:   it's not 100% stable yet

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -58,8 +58,8 @@ $themes = array("UnConeD" => array(
 #
 # Submission moderation votes:
 #   The keys of this associative array are displayed in each submission's selection box whereas the corresponding values represent the mathematical calculation to be performed to update a comment's value.
-#   Warning: changing $submission_votes will affect the integrity of all pending stories in the open submission queue.   Do not change this setting unless there are no pending stories in the submission queue or unless you know what you are doing.
-$submission_votes = array("neutral (+0)" => "+ 0",
+#   Warning: changing $moderation_votes will affect the integrity of all pending stories in the open submission queue.   Do not change this setting unless there are no pending stories in the submission queue or unless you know what you are doing.
+$moderation_votes = array("neutral (+0)" => "+ 0",
                           "post it (+1)" => "+ 1",
                           "dump it (-1)" => "- 1");
 
