- refactoring, refactoring, refactoring

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -31,7 +31,7 @@ $comment_votes = array("none" => "none",
 #
 # Allowed HTML tags:
 #
-$allowed_html = "<A><B><BLOCKQUOTE><DD><DL><DT><EM><HR><I><LI><SMALL><OL><U><UL>";
+$allowed_html = "<A><B><BLOCKQUOTE><CODE><DD><DL><DT><EM><HR><I><LI><SMALL><OL><U><UL>";
 
 #
 # Name for anonymous users:
