- small improvements as well as 2 bugfixes

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -53,7 +53,8 @@ $themes = array("UnConeD" => array(
 # Languages / translation / internationalization:
 #   The first language listed in this associative array will automatically become the default language.  You can add a language but make sure your SQL table, called locales is updated appropriately.
 #   Translation support - as provided by the default locale module add significant overhead to your site in exchange for excessive maintenance capabilities.  If your site does not require translation support, disable it by commenting out the $language variable below.
-#$languages = array("en" => "English");
+#$language = array();  // = language support disabled
+$languages = array("en" => "English");
 
 #
 # Submission moderation votes:
@@ -76,6 +77,6 @@ $submission_rate = array("comment" => "60",     //  60 seconds = 1 minute
 # Submission size:
 #  The maximum length (i.e. the maximum number of characters) a story, a diary entry, or a comment is allowed to be.
 #
-$submission_size = 12000;     // 12.000 characters is appr. 300 lines
+$submission_size = 12000;          // 12.000 characters is appr. 300 lines
 
 ?>
