- fixed typo in hostname.conf

--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -70,7 +70,7 @@ $moderation_votes = array("neutral (+0)" => "+ 0",
 #   Example: '"comment" => 60' means that there is only one new comment allowed from the same IP-address every 60 seconds.
 #
 $submission_rate = array("comment" => "60",     //  60 seconds = 1 minute
-                         "node"   => "300")     // 300 seconds = 5 minutes
+                         "node"   => "300");    // 300 seconds = 5 minutes
 
 #
 # Submission size:
