--- a/.htaccess
+++ b/.htaccess
@@ -2,13 +2,8 @@
 # Apache/PHP/site settings:
 #
 
-# Archive feature:
-<Files archive>
-  ForceType application/x-httpd-php
-</Files>
-
 # Protect files and directories from prying eyes:
-<Files ~ "(class|conf|CVS|database|Entries|inc|modules|*.module|Repository|Root|script|sh|sql|theme)">
+<Files ~ "(class|conf|CVS|database|Entries|inc|modules|*\.module|Repository|Root|script|sh|sql|theme)">
   order deny,allow
   deny from all
 </Files>
