--- a/includes/hostname.conf
+++ b/includes/hostname.conf
@@ -1,5 +1,22 @@
 <?php
 
+# IMPORTANT!
+# Extract from the Drupal handbook:
+# "5.Rename the configuration file includes/hostname.conf to match your
+# server's hostname:
+#       $ cp includes/hostname.conf includes/www.yourdomain.com.conf
+# /'s and :'s are translated to .'s. So if the URI of your drupal site
+# would be http://www.yourdomain.com:80/foo/ your configuration file
+# should be named www.yourdomain.com.80.foo.conf."
+#
+# If you intend to support multiple domains or vhosts with different
+# configurations make sure you read:
+#   http://www.drop.org/node.php?id=173.
+#
+# If you are going to only use one domain/vhost, or the same
+# configuration for several domains you can still use the domain.conf
+# format, or simply rename this file to default.conf.
+
 #
 # Database settings:
 #
@@ -10,7 +27,10 @@ $db_name = "database";
 
 #
 # Comment votes:
-#   The keys of this associative array are displayed in each comment's selection box whereas the corresponding values represent the mathematical calculation to be performed to update a comment's value.
+#   The keys of this associative array are displayed in each comment's
+#   selection box whereas the corresponding values represent the
+#   mathematical calculation to be performed to update a comment's
+#   value.
 #
 $comment_votes = array("none" => "none",
                        "-1"   => "- 1",
@@ -28,7 +48,8 @@ $allowed_html = "<A><B><BLOCKQUOTE><CODE><DD><DL><DT><EM><HR><I><LI><SMALL><OL><
 
 #
 # Themes:
-#   The first theme listed in this associative array will automatically become the default theme.
+#   The first theme listed in this associative array will automatically
+#   become the default theme.
 #
 $themes = array("UnConeD" => array(
                   "themes/unconed/unconed.theme",
@@ -39,8 +60,16 @@ $themes = array("UnConeD" => array(
 
 #
 # Languages / translation / internationalization:
-#   The first language listed in this associative array will automatically become the default language.  You can add a language but make sure your SQL table, called locales is updated appropriately.
-#   Translation support - as provided by the default locale module add significant overhead to your site in exchange for excessive maintenance capabilities.  If your site does not require translation support, disable it by commenting out the $language variable below.
+#   The first language listed in this associative array will
+#   automatically become the default language.  You can add a language
+#   but make sure your SQL table, called locales is updated
+#   appropriately.
+#
+#   Translation support - as provided by the default locale module add
+#   significant overhead to your site in exchange for excessive
+#   maintenance capabilities.  If your site does not require
+#   translation support, disable it by commenting out the $language
+#   variable below.
 #$language = array();  // = language support disabled
 $languages = array("en" => "English");
 
