--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
 #
 
 # Protect files and directories from prying eyes:
-<Files ~ "(class|conf|CVS|database|Entries|inc|modules|*\.module|Repository|Root|script|sh|sql|theme)">
+<Files ~ "(class|conf|CVS|database|Entries|inc|modules|\.module|Repository|Root|script|sh|sql|theme)">
   order deny,allow
   deny from all
 </Files>
