--- a/.htaccess
+++ b/.htaccess
@@ -26,6 +26,7 @@ ErrorDocument 500 /error.php
    php_value session.cookie_lifetime 2000000
    php_value session.gc_maxlifetime  2000000
    php_value session.cache_expire    200000
+   php_value session.save_handler    user 
 </IfModule>
 
 # Various rewrite rules
