--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,8 @@ ErrorDocument 500 /error.php
    php_value magic_quotes_gpc        1
    php_value magic_quotes_runtime    0
    php_value magic_quotes_sybase     0
+   php_value session.cache_expire    200000
+   php_value session.cookie_lifetime 2000000
    php_value session.auto_start      0
    php_value session.save_handler    user 
 </IfModule>
