- applying patches from Axel Kollmorgen. See   http://list.drupal.org/drupal-devel/2002-February/thread.html#6678   http://list.drupal.org/drupal-devel/2002-February/thread.html#6629 - removed references to $this->user() from themes. - removed $BaseTheme->user(). It was deprecated a while back.
NOTE: this update will break custom themes, so make sure you update your
themes before updating!

--- a/.htaccess
+++ b/.htaccess
@@ -29,6 +29,7 @@ ErrorDocument 500 /error.php
    php_value session.cookie_lifetime 2000000
    php_value session.auto_start      0
    php_value session.save_handler    user 
+   php_value allow_call_time_pass_reference  Off
 </IfModule>
 
 # Various rewrite rules
