--- a/.htaccess
+++ b/.htaccess
@@ -26,6 +26,7 @@ ErrorDocument 500 /error.php
    php_value magic_quotes_gpc        0
    php_value magic_quotes_runtime    0
    php_value magic_quotes_sybase     0
+   php_value arg_separator.output  "&amp;"  
    php_value session.cache_expire    200000
    php_value session.cookie_lifetime 2000000
    php_value session.auto_start      0
