--- a/.htaccess
+++ b/.htaccess
@@ -38,6 +38,9 @@ ErrorDocument 500 /error.php
 # Various rewrite rules
 <IfModule mod_rewrite.c>
   RewriteEngine on
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule ^(.*)$ index.php?q=$1 [L] 
   RewriteRule ^blog/(.*) /index.php?q=blog/$1 [R]
 </IfModule>
 
