--- a/.htaccess
+++ b/.htaccess
@@ -37,7 +37,7 @@ ErrorDocument 500 /error.php
    php_value session.auto_start      0
    php_value session.save_handler    user
    php_value session.cache_limiter   none
-   php_value allow_call_time_pass_reference  Off
+   php_value allow_call_time_pass_reference  On
 </IfModule>
 
 # Various rewrite rules
